--- a/templates/generator/about.html
+++ b/templates/generator/about.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container text-center">
 <h1>Simple Password Generator</h1>
-This site was made in autumn of 2022 by Ivan Sukhov
+This site was made in autumn of 2022 by povidloDev
 <br>
 Written in Django
 
